--- a/teams/templates/teams/team_list.html
+++ b/teams/templates/teams/team_list.html
@@ -10,55 +10,42 @@
 
 <!-- Main content section -->
 
-<div class="block sm:px-6 lg:px-8 text-2xl dark:text-white flex items-center gap-1 justify-center my-[14px]">
+<div class="sm:px-6 lg:px-8 text-2xl dark:text-white flex items-center gap-1 justify-center my-[14px]">
   {% include 'icons/ball.html' %}
-  <h2 class="background-color rounded-md">
+  <h2 class="background-color rounded-md"> 
     EQUIPES
   </h2>
 </div>
 
 <!-- Table container -->
 <div class="sm:mx-0.5">
-  <div class="max-w-[97vw] py-2 inline-block min-w-full min-w-full sm:px-6 lg:px-8">
-    <div class="
-    overflow-hidden relative z-10 rounded-md
-    rounded-xl 
-    bg-white 
-    forced-colors:outline px-3
-    dark:before:rounded-xl 
-    dark:shadow-[0px_0px_0px_1px_rgba(255,255,255,0.1)]
-    dark:before:shadow-[0px_2px_8px_0px_rgba(0,_0,_0,_0.20),_0px_1px_0px_0px_rgba(255,_255,_255,_0.06)_inset]
-    dark:before:pointer-events-none
-    dark:before:-inset-px
-    dark:before:absolute
-    dark:bg-zinc-900
-    "> 
-
+  <div class="max-w-[97vw] py-2 inline-block min-w-full sm:px-6 lg:px-8">
+    <div class="table_wrapper rounded-md"> 
       <div class="overflow-auto pr-3"> 
         <table class="min-w-[800px] md:min-w-full">
-          <thead class="border-bottom-white border-solid border-b-[#a1a1aa30] border-b-solid border-b-[1px] text-gray-900 dark:text-[#A1A1AA]">
+          <thead class="table_thead">
             <tr class="">
               <!-- Table headers -->
-              <th scope="col" class="text-xs md:text-sm lg:text-md px-2 py-4 text-left sticky dark:bg-zinc-900 left-0 z-10 pl-3">#</th>
-              <th scope="col" class="text-xs md:text-sm lg:text-md px-2 py-4 text-left sticky dark:bg-zinc-900 left-[60px] z-10">
+              <th scope="col" class="table_th sticky dark:bg-zinc-900 left-0 z-10 pl-3"></th>
+              <th scope="col" class="table_th sticky dark:bg-zinc-900 left-[60px] z-10">
                 <!-- Column header for team name -->
                 <a href="{% url 'team_list' %}?field=name{% if request.GET.order == 'asc' %}&order=desc{% else %}&order=asc{% endif %}">
                   Equipe <i class="fa fa-caret-down" aria-hidden="true"></i>
                 </a>
               </th>
-              <th scope="col" class="text-xs md:text-sm lg:text-md px-2 py-4 text-left">
+              <th scope="col" class="table_th">
                 <!-- Column header for average market value -->
                 <a href="{% url 'team_list' %}?field=average_market_value{% if request.GET.order == 'asc' %}&order=desc{% else %}&order=asc{% endif %}">
                   Valor médio de mercado <i class="fa fa-caret-down" aria-hidden="true"></i>
                 </a>
               </th>
-              <th scope="col" class="text-xs md:text-sm lg:text-md px-2 py-4 text-left">
+              <th scope="col" class="table_th">
                 <!-- Column header for total market value -->
                 <a href="{% url 'team_list' %}?field=total_market_value{% if request.GET.order == 'asc' %}&order=desc{% else %}&order=asc{% endif %}">
                   Valor de mercado total <i class="fa fa-caret-down" aria-hidden="true"></i>
                 </a>
               </th>
-              <th scope="col" class="text-xs md:text-sm lg:text-md px-2 py-4 text-right">
+              <th scope="col" class="table_th text-right">
                 <!-- Column header for number of leagues -->
                 <a href="{% url 'team_list' %}?field=num_leagues{% if request.GET.order == 'asc' %}&order=desc{% else %}&order=asc{% endif %}">
                   Competições que joga <i class="fa fa-caret-down" aria-hidden="true"></i>
@@ -66,27 +53,27 @@
               </th>
             </tr>
           </thead>
-          <tbody class="text-gray-900 dark:text-[#A1A1AA]">
+          <tbody>
             <!-- Teams list -->
             {% for team in page_obj %}
-            <tr class="border-b-[#a1a1aa30] border-b-solid border-b-[1px]">
+            <tr class="border-b-[#a1a1aa30]  border-b-[1px]">
               <!-- Team data -->
-              <td class="px-2 py-4 whitespace-nowrap text-xs md:text-sm lg:text-md flex flex-col justify-left align-center sticky dark:bg-zinc-900 left-0 z-10 pl-3">
+              <td class="table_td text-xs md:text-sm lg:text-md flex flex-col justify-left align-center sticky dark:bg-zinc-900 left-0 z-10 pl-3">
                 <img width="40" src="{{ team.small_img }}" class="min-w-[40px]" />
               </td>
-              <td class="text-xs md:text-sm lg:text-md font-light px-2 py-4 whitespace-nowrap sticky dark:bg-zinc-900 left-[60px] z-10">
+              <td class="table_td sticky dark:bg-zinc-900 left-[60px] z-10">
                 <!-- Team name -->
                 <a href="{% url 'team_detail' pk=team.pk %}" class="flex items-center justify-start gap-1 hover:underline">{{ team.name }}</a>
               </td>
-              <td class="text-xs md:text-sm lg:text-md font-light px-2 py-4 whitespace-nowrap text-left">
+              <td class="table_td text-left">
                 <!-- Average market value -->
                 <span>{{ team.average_market_value|passToFloat }}</span>
               </td>
-              <td class="text-xs md:text-sm lg:text-md font-light px-2 py-4 whitespace-nowrap text-left">
+              <td class="table_td text-left">
                 <!-- Total market value -->
                 <span>{{ team.total_market_value|passToFloat }}</span>
               </td>
-              <td class="text-xs md:text-sm lg:text-md font-light px-2 py-4 whitespace-nowrap text-right">
+              <td class="table_td text-right">
                 <!-- Number of leagues -->
                 <span>{{ team.num_leagues }}</span>
               </td>
