--- a/templates/atomic/organisms/datalist_mobile.html
+++ b/templates/atomic/organisms/datalist_mobile.html
@@ -17,13 +17,13 @@
   <div class="search_field relative w-full">
     <input
       type="search"
-      class="bg-transparent outline-none pl-[15px] h-[25px] md:pl-[25px] w-full border-b-solid border-b-[1px] border-b-fff text-[#111111]"
+      class="bg-transparent outline-none pl-[15px] h-[25px] md:pl-[25px] w-full  border-b-[1px] border-b-fff text-[#111111]"
       name="league"
       placeholder="Pesquisar liga, time..."
     />
   </div>
   {% include 'atomic/organisms/datalist_skeleton.html' %}
-  <div class="absolute  translate-y-[100%] w-full max-h-[calc(100vh - 75px)] lg:w-[280px] left-0 bottom-0 search_recomendation lg:max-h-[400px] overflow-auto bg-white lg:rounded-md border-solid border-[1px] border-[#111111]">
+  <div class="absolute  translate-y-[100%] w-full max-h-[calc(100vh - 75px)] lg:w-[280px] left-0 bottom-0 search_recomendation lg:max-h-[400px] overflow-auto bg-white lg:rounded-md  border-[1px] border-[#111111]">
 
     <ul class="leagues_datalist_ul datalist_ul">
     </ul>
