--- a/countries/templates/countries/country_list.html
+++ b/countries/templates/countries/country_list.html
@@ -15,48 +15,34 @@
   </h2>
 </div>
 
-<!-- Table container -->
 <div class="sm:mx-0.5">
-  <div class="max-w-[97vw] py-2 inline-block min-w-full min-w-full sm:px-6 lg:px-8">
-    <div class="
-    overflow-hidden relative z-10 rounded-md
-    rounded-xl 
-    bg-white 
-    forced-colors:outline px-3
-    dark:before:rounded-xl 
-    dark:shadow-[0px_0px_0px_1px_rgba(255,255,255,0.1)]
-    dark:before:shadow-[0px_2px_8px_0px_rgba(0,_0,_0,_0.20),_0px_1px_0px_0px_rgba(255,_255,_255,_0.06)_inset]
-    dark:before:pointer-events-none
-    dark:before:-inset-px
-    dark:before:absolute
-    dark:bg-zinc-900
-    "> 
-
+  <div class="max-w-[97vw] py-2 inline-block min-w-full sm:px-6 lg:px-8">
+    <div class="table_wrapper rounded-md"> 
       <div class="overflow-auto pr-3"> 
         <table class="min-w-[800px] md:min-w-full">
-          <thead class="border-bottom-white border-solid border-b-[#a1a1aa30] border-b-solid border-b-[1px] text-gray-900 dark:text-[#A1A1AA]">
+          <thead class="table_thead">
             <tr class="">
               <!-- Table headers -->
-              <th scope="col" class="text-xs md:text-sm lg:text-md px-2 py-4 text-left sticky dark:bg-zinc-900 left-0 z-10 pl-3 w-[50px]">#</th>
-              <th scope="col" class="text-xs md:text-sm lg:text-md px-2 py-4 text-left sticky dark:bg-zinc-900 left-[50px] z-10">
+              <th scope="col" class="table_th sticky dark:bg-zinc-900 left-0 z-10 pl-3 w-[50px]"></th>
+              <th scope="col" class="table_th sticky dark:bg-zinc-900 left-[50px] z-10">
                 <!-- Column header for country -->
                 <a href="{% url 'country_list' %}?field=name{% if request.GET.order == 'asc' %}&order=desc{% else %}&order=asc{% endif %}">
                   País <i class="fa fa-caret-down" aria-hidden="true"></i>
                 </a>
               </th>
-              <th scope="col" class="text-xs md:text-sm lg:text-md px-2 py-4 text-left">
+              <th scope="col" class="table_th">
                 <!-- Column header for number of leagues -->
                 <a href="{% url 'country_list' %}?field=num_leagues{% if request.GET.order == 'asc' %}&order=desc{% else %}&order=asc{% endif %}ues' %}">
                   Número de ligas <i class="fa fa-caret-down" aria-hidden="true"></i>
                 </a>
               </th>
-              <th scope="col" class="text-xs md:text-sm lg:text-md px-2 py-4 text-left">
+              <th scope="col" class="table_th">
                 <!-- Column header for number of teams -->
                 <a href="{% url 'country_list' %}?field=name{% if request.GET.order == 'asc' %}&order=desc{% else %}&order=asc{% endif %}">
                   Número de times <i class="fa fa-caret-down" aria-hidden="true"></i>
                 </a>
               </th>
-              <th scope="col" class="text-xs md:text-sm lg:text-md px-2 py-4 text-right">
+              <th scope="col" class="table_th text-right">
                 <!-- Column header for number of players -->
                 <a href="{% url 'country_list' %}?field=num_players{% if request.GET.order == 'asc' %}&order=desc{% else %}&order=asc{% endif %}ers' %}">
                   Número de jogadores <i class="fa fa-caret-down" aria-hidden="true"></i>
@@ -68,32 +54,32 @@
             <!-- Loop through countries -->
             {% for country in page_obj %}
             <!-- Apply row class -->
-            <tr class="border-b-[#a1a1aa30] border-b-solid border-b-[1px]">
+            <tr class="border-b-[#a1a1aa30]  border-b-[1px]">
               <!-- Country data -->
-              <td class="px-2 py-4 whitespace-nowrap text-xs md:text-sm lg:text-md flex flex-col justify-left align-center sticky dark:bg-zinc-900 left-0 z-10 pl-3 w-[50px]">
+              <td class="px-2 py-4 whitespace-nowrap text-xs md:text-sm lg:text-base flex flex-col justify-left align-center sticky dark:bg-zinc-900 left-0 z-10 pl-3 w-[50px]">
                 <!-- Country flag -->
                 <img src="/media/images/countries/{{ country.slug }}{{ country.id }}.webp" class="inline-block w-[30px] min-w-[30px]"/>
 
               </td>
-              <td class="text-xs md:text-sm lg:text-md font-light px-2 py-4 whitespace-nowrap sticky dark:bg-zinc-900 left-[50px] z-10">
+              <td class="text-xs md:text-sm lg:text-base font-light px-2 py-4 whitespace-nowrap sticky dark:bg-zinc-900 left-[50px] z-10">
                 <!-- Country name -->
                 <a href="{% url 'countries_detail' pk=country.pk %}">
                   <span class="hover:underline">{{ country.name }}</span>
                 </a>
               </td>
-              <td class="text-xs md:text-sm lg:text-md font-light px-2 py-4 whitespace-nowrap text-left">
+              <td class="text-xs md:text-sm lg:text-base font-light px-2 py-4 whitespace-nowrap text-left">
                 <!-- Number of leagues -->
                 <a href="#" class="flex items-center justify-start gap-1" id="{{ country.slug }}-num-leagues">
                   <span>{{ country.num_leagues }}</span>
                 </a>
               </td>
-              <td class="text-xs md:text-sm lg:text-md font-light px-2 py-4 whitespace-nowrap text-left">
+              <td class="text-xs md:text-sm lg:text-base font-light px-2 py-4 whitespace-nowrap text-left">
                 <!-- Number of teams -->
                 <a href="#" class="flex items-center justify-start gap-1" id="{{ country.slug }}-num-teams">
                   <span>{{ country.num_teams }}</span>
                 </a>
               </td>
-              <td class="text-xs md:text-sm lg:text-md font-light px-2 py-4 whitespace-nowrap text-right">
+              <td class="text-xs md:text-sm lg:text-base font-light px-2 py-4 whitespace-nowrap text-right">
                 <!-- Number of players -->
                 <a href="#" class="flex items-center justify-end gap-1 text-right" id="{{ country.slug }}-num-players">
                   <span>{{ country.num_players }}</span>
