--- a/leagues/templates/leagues/league_detail.html
+++ b/leagues/templates/leagues/league_detail.html
@@ -15,110 +15,63 @@
 
 
 <div class="flex justify-center">
-  <div class="inline-block p-3 bg-white rounded-md   
-  dark:bg-zinc-900 forced-colors:outline rounded-lg   
-  dark:before:rounded-xl 
-  dark:shadow-[0px_0px_0px_1px_rgba(255,255,255,0.1)]
-  dark:before:shadow-[0px_2px_8px_0px_rgba(0,_0,_0,_0.20),_0px_1px_0px_0px_rgba(255,_255,_255,_0.06)_inset]
-  dark:before:pointer-events-none
-  dark:before:absolute
-  
-  ">
+  <div class="card ">
   <img width="80" src="{{ image_url }}" class="m-auto block league_main_img" />
   <h2 class="text-center dark:text-white text-md font-medium">{{ league.name | upper }}</h2>
   </div>
 </div>
 
 
-<div class="flex justify-center gap-2 my-5">
-  <div class="highlight_card">
-    <div class="highlight_card h-full w-full max-w-sm justify-center bg-white flex rounded-sm gap-2 items-center shadow px-2 py-1
-    dark:bg-zinc-900 forced-colors:outline rounded-lg   
-    dark:before:rounded-xl 
-    dark:shadow-[0px_0px_0px_1px_rgba(255,255,255,0.1)]
-    dark:before:shadow-[0px_2px_8px_0px_rgba(0,_0,_0,_0.20),_0px_1px_0px_0px_rgba(255,_255,_255,_0.06)_inset]
-    dark:before:pointer-events-none
-    dark:before:absolute
-    
-    ">
-      <span class="text-sm dark:text-[#A1A1AA]">
+<div class="grid grid-cols-1 grid-rows-3 md:grid-cols-2 md:grid-rows-2 lg:grid-cols-3 lg:grid-rows-1 gap-2 my-6 mx-auto min-w-full sm:px-6 lg:px-8">
+    <div class="detail_card">
+      <span class="text-xs md:text-sm dark:text-[#A1A1AA]">
         PAÍS:
       </span>
-      <img width="26" height="16" src="/media/images/countries/{{ related_country.slug }}{{ related_country.id }}.webp" class="inline-block h-[16px]" />
-      <a href={% url "country_detail" pk=related_country.pk %} class="inline-block text-sm font-medium dark:text-white">
+      <a href={% url "country_detail" pk=related_country.pk %} class="flex items-center gap-1 text-xs md:text-sm font-medium dark:text-white">
+        <img width="26" height="16" src="/media/images/countries/{{ related_country.slug }}{{ related_country.id }}.webp" class="inline-block h-[16px]" />
         {{ related_country.name | upper }} 
       </a>  
     </div>
-  </div>
 
-  <div class="highlight_card">
-    <div class="highlight_card h-full w-full max-w-sm justify-center bg-white flex rounded-sm gap-2 items-center shadow px-2 py-1
-    shadow px-2 py-1
-    dark:bg-zinc-900 forced-colors:outline rounded-lg   
-    dark:before:rounded-xl 
-    dark:shadow-[0px_0px_0px_1px_rgba(255,255,255,0.1)]
-    dark:before:shadow-[0px_2px_8px_0px_rgba(0,_0,_0,_0.20),_0px_1px_0px_0px_rgba(255,_255,_255,_0.06)_inset]
-    dark:before:pointer-events-none
-    dark:before:absolute
-    
-    ">
-    <span class="text-sm dark:text-[#A1A1AA]">
+    <div class="detail_card">
+      <span class="text-xs md:text-sm dark:text-[#A1A1AA]">
       SALDO: 
-    </span>
-    {% if "-" in league.balance %}
-      <span class="text-red-700 font-bold text-sm"> {{ league.balance | passToFloat }} </span>
-    {% else %}
-        <span class="text-green-700 font-bold text-sm"> {{ league.balance | passToFloat }} </span>
-    {% endif %}
+      </span>
+      {% if "-" in league.balance %}
+        <span class="text-red-700 font-bold text-sm"> {{ league.balance | passToFloat }} </span>
+      {% else %}
+          <span class="text-green-700 font-bold text-sm"> {{ league.balance | passToFloat }} </span>
+      {% endif %}
 
     </div>
-  </div>
 
-  <div class="highlight_card">
-    <div class="highlight_card h-full w-full max-w-sm justify-center bg-white flex rounded-sm gap-2 items-center shadow px-2 py-1
-    dark:bg-zinc-900 forced-colors:outline rounded-lg   
-    dark:before:rounded-xl 
-    dark:shadow-[0px_0px_0px_1px_rgba(255,255,255,0.1)]
-    dark:before:shadow-[0px_2px_8px_0px_rgba(0,_0,_0,_0.20),_0px_1px_0px_0px_rgba(255,_255,_255,_0.06)_inset]
-    dark:before:pointer-events-none
-    dark:before:absolute
-    ">
-      <span class="text-sm dark:text-[#A1A1AA]">
+    <div class="detail_card">
+      <span class="text-xs md:text-sm dark:text-[#A1A1AA]">
         Nº DE EQUIPES: 
       </span>
       <span class="text-green-700 font-bold text-sm"> {{ related_teams_count }} </span>
     </div>
-  </div>
-
-</div>
-
 </div>
 
 
 <!-- Table container -->
-<div class="overflow-x-auto sm:mx-0.5 lg:mx-0.5">
-  <div class="py-2 inline-block min-w-full sm:px-2 lg:px-8">
-    <div class="rounded-xl bg-white forced-colors:outline px-3 overflow-hidden
-    dark:before:rounded-xl 
-    dark:shadow-[0px_0px_0px_1px_rgba(255,255,255,0.1)]
-    dark:before:shadow-[0px_2px_8px_0px_rgba(0,_0,_0,_0.20),_0px_1px_0px_0px_rgba(255,_255,_255,_0.06)_inset]
-    dark:before:pointer-events-none
-    dark:before:-inset-px
-    dark:before:absolute
-    dark:bg-zinc-900
-    "> 
+<div class="sm:mx-0.5">
+  <div class="max-w-[97vw] py-2 inline-block min-w-full sm:px-6 lg:px-8">
+    <div class="team_tables table_wrapper rounded-md">
+      <!-- Table for displaying players data -->
+      <div class="overflow-auto px-3"> 
       <table class="min-w-full rounded-md">
-        <thead class="border-bottom-white border-solid border-b-[#a1a1aa30] border-b-solid border-b-[1px] text-gray-900 dark:text-[#A1A1AA]">
+        <thead class="table_thead">
           <tr>
             <th
               scope="col"
-              class="text-sm font-medium px-2 py-4 text-left"
+              class="table_th"
             >
-              #
+              
             </th>
             <th
               scope="col"
-              class="text-sm font-medium px-2 py-4 text-left"
+              class="table_th"
             >
               <a
                 href="{% url 'league_detail' pk=league.pk  %}?field=name{% if request.GET.order == 'asc' %}&order=desc{% else %}&order=asc{% endif %}"
@@ -129,7 +82,7 @@
             </th>
             <th
               scope="col"
-              class="text-sm font-medium px-2 py-4 text-left"
+              class="table_th"
             >
               <a href="{% url 'league_detail' pk=league.pk %}?field=average_market_value{% if request.GET.order == 'asc' %}&order=desc{% else %}&order=asc{% endif %}">
                 Valor médio de mercado               
@@ -138,7 +91,7 @@
             </th>
             <th
               scope="col"
-              class="text-sm font-medium px-2 py-4 text-right"
+              class="table_th text-right"
             >
               <a href="{% url 'league_detail' pk=league.pk %}?field=total_market_value{% if request.GET.order == 'asc' %}&order=desc{% else %}&order=asc{% endif %}">
                 Valor de mercado total 
@@ -147,13 +100,13 @@
             </th>
           </tr>
         </thead>
-        <tbody class="text-gray-900 dark:text-[#A1A1AA]">
+        <tbody>
           {% for team in related_teams %}
-          <tr class="border-b-[#a1a1aa30] border-b-solid border-b-[1px]">
-            <td class="px-2 py-4 whitespace-nowrap text-sm font-medium">
-              <img src="{{ team.small_img }}" />
+          <tr class="border-b-[#a1a1aa30]  border-b-[1px]">
+            <td class="table_td">
+                <img width="52" height="52" src="{{ team.small_img }}" class="object-cover rounded-full w-[38px] md:w-[52px] m-auto block" />
             </td>
-            <td class="text-sm font-light px-2 py-4 whitespace-nowrap">
+            <td class="table_td">
               {% if country_pk %}
                 <a href="{% url 'country_league_team_detail' country_pk=country_pk league_pk=league.pk pk=team.pk %}?league={{league.pk}}" class="flex items-center justify-start gap-1">
               {% else %}
@@ -163,10 +116,10 @@
               </a>
 
             </td>
-            <td class="text-sm font-light px-2 py-4 whitespace-nowrap">
+            <td class="table_td">
               <span>{{ team.average_market_value|passToFloat }}</span>
             </td>
-            <td class="text-sm font-light px-2 py-4 whitespace-nowrap text-right">
+            <td class="table_td text-right">
               <span>{{ team.total_market_value|passToFloat }}</span>
             </td>
           </tr>
@@ -176,8 +129,9 @@
       </table>
     </div>
   </div>
+</div>
 
-  {% include 'atomic/organisms/pagination.html' with url=request.build_absolute_uri related_items=related_teams %}
+{% include 'atomic/organisms/pagination.html' with url=request.build_absolute_uri related_items=related_teams %}
   
 </div>
 
