--- a/leagues/templates/leagues/league_list.html
+++ b/leagues/templates/leagues/league_list.html
@@ -9,7 +9,7 @@
 {% load custom_filters %}
 
 <!-- Main content section -->
-<div class="block sm:px-6 lg:px-8 text-2xl dark:text-white flex items-center gap-1 justify-center my-[14px]">
+<div class="sm:px-6 lg:px-8 text-2xl dark:text-white flex items-center gap-1 justify-center my-[14px]">
   {% include 'icons/league.html' %}
   <h2 class="background-color rounded-md">
     LIGAS
@@ -17,56 +17,44 @@
 </div>
 
 <div class="sm:mx-0.5">
-  <div class="max-w-[97vw] py-2 inline-block min-w-full min-w-full sm:px-6 lg:px-8">
-    <div class="
-    overflow-hidden relative z-10 rounded-md
-    rounded-xl 
-    bg-white 
-    forced-colors:outline px-3
-    dark:before:rounded-xl 
-    dark:shadow-[0px_0px_0px_1px_rgba(255,255,255,0.1)]
-    dark:before:shadow-[0px_2px_8px_0px_rgba(0,_0,_0,_0.20),_0px_1px_0px_0px_rgba(255,_255,_255,_0.06)_inset]
-    dark:before:pointer-events-none
-    dark:before:-inset-px
-    dark:before:absolute
-    dark:bg-zinc-900
-    "> 
+  <div class="max-w-[97vw] py-2 inline-block min-w-full sm:px-6 lg:px-8">
+    <div class="table_wrapper rounded-md"> 
 
       <div class="overflow-auto pr-3"> 
         <table class="min-w-[800px] md:min-w-full">
-          <thead class="border-bottom-white border-solid border-b-[#a1a1aa30] border-b-solid border-b-[1px] text-gray-900 dark:text-[#A1A1AA]">
+          <thead class="table_thead">
             <tr class="">
               <!-- Table headers -->
-              <th scope="col" class="text-xs md:text-sm lg:text-md px-2 py-4 text-left">#</th>
-              <th scope="col" class="text-xs md:text-sm lg:text-md px-2 py-4 text-left sticky dark:bg-zinc-900 left-0 z-10 pl-3">
+              <th scope="col" class="table_th"></th>
+              <th scope="col" class="table_th sticky dark:bg-zinc-900 left-0 z-10 pl-3">
                 <!-- Column header for league name -->
                 <a href="{% url 'league_list' %}?field=name{% if request.GET.order == 'asc' %}&order=desc{% else %}&order=asc{% endif %}">
                   Liga 
                   <i class="fa fa-caret-down" aria-hidden="true"></i>
                 </a>
               </th>
-              <th scope="col" class="text-xs md:text-sm lg:text-md px-2 py-4 text-left">
+              <th scope="col" class="table_th">
                 <!-- Column header for expenses -->
                 <a href="{% url 'league_list' %}?field=outcomes{% if request.GET.order == 'asc' %}&order=desc{% else %}&order=asc{% endif %}">
                   Despesas 
                   <i class="fa fa-caret-down" aria-hidden="true"></i>
                 </a>
               </th>
-              <th scope="col" class="text-xs md:text-sm lg:text-md px-2 py-4 text-left">
+              <th scope="col" class="table_th">
                 <!-- Column header for income -->
                 <a href="{% url 'league_list' %}?field=incomes{% if request.GET.order == 'asc' %}&order=desc{% else %}&order=asc{% endif %}">
                   Renda 
                   <i class="fa fa-caret-down" aria-hidden="true"></i>
                 </a>
               </th>
-              <th scope="col" class="text-xs md:text-sm lg:text-md px-2 py-4 text-left">
+              <th scope="col" class="table_th">
                 <!-- Column header for balance -->
                 <a href="{% url 'league_list' %}?field=balance{% if request.GET.order == 'asc' %}&order=desc{% else %}&order=asc{% endif %}">
                   Saldo 
                   <i class="fa fa-caret-down" aria-hidden="true"></i>
                 </a>
               </th>
-              <th scope="col" class="text-xs md:text-sm lg:text-md px-2 py-4 text-right">
+              <th scope="col" class="table_th text-right">
                 <!-- Column header for number of teams -->
                 <a href="{% url 'league_list' %}?field=num_teams{% if request.GET.order == 'asc' %}&order=desc{% else %}&order=asc{% endif %}">
                   Equipes 
@@ -75,31 +63,31 @@
               </th>
             </tr>
           </thead>
-          <tbody class="text-gray-900 dark:text-[#A1A1AA]">
+          <tbody>
             <!-- Loop through league objects -->
             {% for league in page_obj %}
             <!-- Alternating row colors -->
-            <tr class="border-b-[#a1a1aa30] border-b-solid border-b-[1px]">
+            <tr class="border-b-[#a1a1aa30]  border-b-[1px]">
               <!-- League data -->
-              <td class="px-2 py-4 text-sm font-light whitespace-nowrap">
+              <td class="table_td">
                 <img width="40" src="{{ league.small_img }}" class="min-w-[40px]" />
               </td>
-              <td class="px-2 py-4 text-sm font-light whitespace-nowrap dark:bg-zinc-900 sticky left-0 z-10 pl-3">
+              <td class="table_td dark:bg-zinc-900 sticky left-0 z-10 pl-3">
                 <!-- League name -->
                 <a href="{% url 'league_detail' pk=league.pk %}" class="flex items-center justify-start gap-1">
                   <img src="{{ league.country_img }}" />
                   <span class="hover:underline max-w-[125px] whitespace-normal"> {{ league.name }} </span>
                 </a>
               </td>
-              <td class="px-2 py-4 text-sm font-light whitespace-nowrap">
+              <td class="table_td">
                 <!-- Expenses -->
                 <span> {{ league.outcomes|passToFloat }} </span>
               </td>
-              <td class="px-2 py-4 text-sm font-light whitespace-nowrap">
+              <td class="table_td">
                 <!-- Income -->
                 <span class="text-green-700 font-bold">{{ league.incomes|passToFloat }}</span>
               </td>
-              <td class="px-2 py-4 text-sm font-light whitespace-nowrap">
+              <td class="table_td">
                 <!-- Balance -->
                 {% if "-" in league.balance %}
                     <span class="text-red-700 font-bold"> {{ league.balance | passToFloat }} </span>
@@ -107,7 +95,7 @@
                     <span class="text-green-700 font-bold"> {{ league.balance | passToFloat }} </span>
                 {% endif %}
               </td>
-              <td class="px-2 py-4 text-sm font-light whitespace-nowrap text-right">
+              <td class="table_td text-right">
                 <!-- Number of teams -->
                 {{ league.num_teams  }}
               </td>
