--- a/stadiums/templates/stadiums/stadium_list.html
+++ b/stadiums/templates/stadiums/stadium_list.html
@@ -8,7 +8,7 @@
 {% block list_content %}
 {% load custom_filters %}
 
-<div class="block sm:px-6 lg:px-8 text-2xl dark:text-white flex items-center gap-1 justify-center my-[14px]">
+<div class="sm:px-6 lg:px-8 text-2xl dark:text-white flex items-center gap-1 justify-center my-[14px]">
   {% include 'icons/stadium.html' %}
   <h2 class="background-color rounded-md">
     Estádios
@@ -18,52 +18,39 @@
 
 <!-- Table container -->
 <div class="sm:mx-0.5">
-  <div class="max-w-[97vw] py-2 inline-block min-w-full min-w-full sm:px-6 lg:px-8">
-    <div class="
-    overflow-hidden relative z-10 rounded-md
-    rounded-xl 
-    bg-white 
-    forced-colors:outline px-3
-    dark:before:rounded-xl 
-    dark:shadow-[0px_0px_0px_1px_rgba(255,255,255,0.1)]
-    dark:before:shadow-[0px_2px_8px_0px_rgba(0,_0,_0,_0.20),_0px_1px_0px_0px_rgba(255,_255,_255,_0.06)_inset]
-    dark:before:pointer-events-none
-    dark:before:-inset-px
-    dark:before:absolute
-    dark:bg-zinc-900
-    "> 
-
+  <div class="max-w-[97vw] py-2 inline-block min-w-full sm:px-6 lg:px-8">
+    <div class="table_wrapper rounded-md"> 
       <div class="overflow-auto pr-3"> 
         <table class="min-w-[800px] md:min-w-full">
-          <thead class="border-bottom-white border-solid border-b-[#a1a1aa30] border-b-solid border-b-[1px] text-gray-900 dark:text-[#A1A1AA]">
+          <thead class="table_thead">
             <tr class="">
               <!-- Table headers -->
-              <th scope="col" class="text-xs md:text-sm lg:text-md px-2 py-4 text-left">#</th>
-              <th scope="col" class="text-xs md:text-sm lg:text-md font-light px-2 py-4 whitespace-nowrap text-left sticky dark:bg-zinc-900 left-0 z-10 pl-3">
+              <th scope="col" class="table_th"></th>
+              <th scope="col" class="table_th sticky dark:bg-zinc-900 left-0 z-10 pl-3">
                 <!-- Column header for stadium -->
                 <a href="{% url 'stadium_list' %}?field=name{% if request.GET.order == 'asc' %}&order=desc{% else %}&order=asc{% endif %}">
                   Estádio <i class="fa fa-caret-down" aria-hidden="true"></i>
                 </a>
               </th>
-              <th scope="col" class="text-xs md:text-sm lg:text-md font-light px-2 py-4 whitespace-nowrap text-left">
+              <th scope="col" class="table_th">
                 <!-- Column header for stadium -->
                 <a href="{% url 'stadium_list' %}?field=grass_type{% if request.GET.order == 'asc' %}&order=desc{% else %}&order=asc{% endif %}">
                   Gramado <i class="fa fa-caret-down" aria-hidden="true"></i>
                 </a>
               </th>
-              <th scope="col" class="text-xs md:text-sm lg:text-md font-light px-2 py-4 whitespace-nowrap text-left">
+              <th scope="col" class="table_th">
                 <!-- Column header for stadium -->
                 <a href="{% url 'stadium_list' %}?field=crowd_capacity{% if request.GET.order == 'asc' %}&order=desc{% else %}&order=asc{% endif %}">
                   Capacidade <i class="fa fa-caret-down" aria-hidden="true"></i>
                 </a>
               </th>
-              <th scope="col" class="text-xs md:text-sm lg:text-md font-light px-2 py-4 whitespace-nowrap text-left">
+              <th scope="col" class="table_th">
                 <!-- Column header for stadium -->
                 <a href="{% url 'stadium_list' %}?field=staterooms{% if request.GET.order == 'asc' %}&order=desc{% else %}&order=asc{% endif %}">
                   Camarotes <i class="fa fa-caret-down" aria-hidden="true"></i>
                 </a>
               </th>
-              <th scope="col" class="text-xs md:text-sm lg:text-md font-light px-2 py-4 whitespace-nowrap text-right">
+              <th scope="col" class="table_th whitespace-nowrap text-right">
                 <!-- Column header for stadium -->
                 <a href="{% url 'stadium_list' %}?field=build_value{% if request.GET.order == 'asc' %}&order=desc{% else %}&order=asc{% endif %}">
                   Valor de construção <i class="fa fa-caret-down" aria-hidden="true"></i>
@@ -75,23 +62,23 @@
             <!-- Loop through countries -->
             {% for stadium in page_obj %}
             <!-- Apply row class -->
-            <tr class="border-b-[#a1a1aa30] border-b-solid border-b-[1px]">
-              <td class="px-2 py-4 whitespace-nowrap text-xs md:text-sm lg:text-md flex flex-col justify-left align-center">
+            <tr class="border-b-[#a1a1aa30]  border-b-[1px]">
+              <td class="table_td flex flex-col justify-left align-center">
                 <!-- Country name -->
                 <img src = "{{ stadium.imgs | get_stadium_img }}" width="190" height="127" class="min-w-[40px]" />
               </td>
-              <td class="text-xs md:text-sm lg:text-md font-light px-2 py-4 whitespace-nowrap text-left sticky dark:bg-zinc-900 left-0 z-10 pl-3">
+              <td class="table_td sticky dark:bg-zinc-900 left-0 z-10 pl-3">
                 <!-- Country name -->
                 <a href="#">
                   <span class="hover:underline">{{ stadium.name }}</span>
                 </a>
               </td>  
-              <td class="text-xs md:text-sm lg:text-md font-light px-2 py-4 whitespace-nowrap text-left">
+              <td class="table_td">
                 <span>
                     {{ stadium.grass_type }}
                 </span>
               </td>  
-              <td class="text-xs md:text-sm lg:text-md font-light px-2 py-4 whitespace-nowrap text-left">
+              <td class="table_td">
                 <span>
                   {% if stadium.crowd_capacity %}
                     {{ stadium.crowd_capacity }}
@@ -100,7 +87,7 @@
                   {% endif %}
                 </span>
               </td>  
-              <td class="text-xs md:text-sm lg:text-md font-light px-2 py-4 whitespace-nowrap text-left">
+              <td class="table_td">
                 <span>
                   {% if stadium.staterooms %}
                     {{ stadium.staterooms }}
@@ -109,7 +96,7 @@
                   {% endif %}
                 </span>
               </td>  
-              <td class="text-xs md:text-sm lg:text-md font-light px-2 py-4 whitespace-nowrap sticky dark:bg-zinc-900 left-[60px] z-10 text-right">
+              <td class="table_td sticky dark:bg-zinc-900 left-[60px] z-10 text-right">
                 <span>
                   {{ stadium.build_value | passToFloat }}
                 </span>
