--- a/templates/atomic/organisms/datalist_desktop.html
+++ b/templates/atomic/organisms/datalist_desktop.html
@@ -19,14 +19,14 @@
     </div>
     <input
       type="search"
-      class="bg-transparent outline-none pl-[25px] w-[280px] border-b-solid border-b-[1px] border-b-fff text-white"
+      class="bg-transparent outline-none pl-[25px] w-[280px]  border-b-[1px] border-b-fff text-white"
       name="league"
       placeholder="Pesquisar liga, time..."
     />
   </div>
   {% include 'atomic/organisms/datalist_skeleton.html' %}
   <div
-    class="absolute translate-y-[100%] w-[280px] left-0 bottom-0 search_recomendation max-h-[400px] overflow-auto bg-white rounded-md border-solid border-[1px] border-[#111111]"
+    class="absolute translate-y-[100%] w-[280px] left-0 bottom-0 search_recomendation max-h-[400px] overflow-auto bg-white rounded-md  border-[1px] border-[#111111]"
   >
 
     
