--- a/templates/atomic/organisms/datalist_skeleton.html
+++ b/templates/atomic/organisms/datalist_skeleton.html
@@ -1,5 +1,5 @@
 <div
-class="absolute w-full lg:w-[280px] translate-y-[100%] bottom-0 left-0 h-[371px] hidden overflow-auto bg-white lg:rounded-md border-solid border-[1px] border-[#111111] datalist_skeleton skeleton-loading"
+class="absolute w-full lg:w-[280px] translate-y-[100%] bottom-0 left-0 h-[371px] hidden overflow-auto bg-white lg:rounded-md  border-[1px] border-[#111111] datalist_skeleton skeleton-loading"
 >
   <ul class="max-h-[400px] overflow-auto absolute top-0 z-30 w-full bg-white">
     <div class="h-2 w-[46px] bg-gray-200 rounded-full dark:bg-gray-400 mt-[10px] ml-[15px]"></div>
