--- a/theme/static_src/src/styles.css
+++ b/theme/static_src/src/styles.css
@@ -1,5 +1,135 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
+
+@layer components {
+  .detail_card {
+    @apply 
+        bg-zinc-900
+        backdrop-filter
+        backdrop-blur-md
+        px-2 
+        forced-colors:outline 
+        py-1
+        flex
+        rounded-sm
+        gap-2 
+        items-center
+        justify-between
+        before:rounded-sm
+        shadow-[0px_0px_0px_1px_rgba(255,255,255,0.1)]
+        before:pointer-events-none
+        before:absolute
+  }
+
+  .card {
+    @apply 
+        p-3 
+        bg-zinc-900
+        forced-colors:outline
+        rounded-lg   
+        before:rounded-xl 
+        shadow-[0px_0px_0px_1px_rgba(255,255,255,0.1)]
+        before:pointer-events-none
+        before:absolute
+  }
+
+  .table_wrapper {
+    @apply 
+        overflow-hidden   
+        relative 
+        z-10 
+        rounded-md 
+        px-3
+        rounded-tl-[0px]  
+        bg-zinc-900       
+        before:rounded-xl 
+        shadow-[0px_0px_0px_1px_rgba(255,255,255,0.1)]
+        before:pointer-events-none
+        before:absolute
+        before:rounded-tl-xl 
+  }
+
+  .table_thead {
+    @apply 
+        border-b-[#a1a1aa30]
+        border-b-[1px]
+  }
+
+  .table_th {
+    @apply 
+      text-[#A1A1AA]
+          text-xs
+          md:text-sm
+          text-left
+          px-2
+          py-4
+  }
+
+  .table_td {
+    @apply 
+      text-xs
+      md:text-sm
+      font-light
+      px-2
+      py-4
+      whitespace-nowrap
+      text-[#A1A1AA]
+  }
+
+  .mini_table_th {
+    @apply 
+      text-[#A1A1AA]
+        text-xs
+        md:text-sm
+        text-left
+        px-2
+        py-4
+  }
+
+  .mini_table_td {
+    @apply 
+        text-xs
+        font-light
+        px-2
+        py-4
+        whitespace-nowrap
+        text-[#A1A1AA]
+  }
+
+  .pagination_a{
+    @apply
+    h-6 w-6
+    flex
+    items-center
+    justify-center
+    rounded-sm
+    dark:before:rounded-xl
+    dark:shadow-[0px_0px_0px_1px_rgba(255,255,255,0.1)]
+    dark:before:pointer-events-none
+    dark:before:-inset-px
+    dark:before:absolute
+    dark:bg-zinc-900
+  }
+
+  .pagination_input{
+    @apply
+    font-bold
+    text-center
+    w-[15px]
+    text-sm
+    bg-transparent
+    border-0
+    outline-0
+    p-0
+  }
+}
 
 .montserrat {
   font-family: "Montserrat", sans-serif;
@@ -12,19 +142,16 @@
   box-shadow: var(--shadow-color) 0px 8px 24px;
 }
 
-html{
-  opacity: 0;
-}
 
-h1, h2, a{
+h1, h2{
   font-family: "Inter", sans-serif;
 }
 
 
 
 
-h3, h4, h5, h6, li, span, th, td, tr{
-  font-family: "Roboto", sans-serif;
+h3, h4, h5, h6, li, span, th, td, tr, a{
+  font-family: "Montserrat", sans-serif;
 }
 
 .update_color_form *:not(button){
@@ -80,7 +207,6 @@ table ::-webkit-scrollbar {
 
 .transition-primary {
   transition: all 0.3s ease 0s;
-  opacity: 1;
 }
 
 .toggle-menu {
@@ -120,7 +246,7 @@ body main {
   min-width: calc(-70px + 100vw);
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 993px) {
   aside {
       left:-300px;
       z-index: 1000
@@ -163,7 +289,7 @@ main {
   background-color: #08080a
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 993px) {
   main{
     width: calc(100% - 70px)
   }
