--- a/templates/atomic/organisms/datalist_desktop.html
+++ b/templates/atomic/organisms/datalist_desktop.html
@@ -2,9 +2,9 @@
 
 <div class="datalist_desktop hidden lg:flex datalist h-hull items-center justify-center relative">
  
-  <div class="search_field relative">
+  <div class="search_field relative flex justify-between items-center">
 
-    <div class="search_icon h-[30px] absolute left-0">
+    <div class="search_icon h-[20px] absolute left-0">
       <svg
         class="w-[20px]"
         xmlns="http://www.w3.org/2000/svg"
@@ -19,7 +19,7 @@
     </div>
     <input
       type="search"
-      class="bg-transparent outline-none pl-[25px] w-[280px]  border-b-[1px] border-b-fff text-white"
+      class="bg-transparent outline-none pl-[25px] py-1 w-[280px]  border-b-[1px] border-b-fff text-white focus:bg-transparent"
       name="league"
       placeholder="Pesquisar liga, time..."
     />
