--- a/templates/atomic/organisms/datalist_mobile.html
+++ b/templates/atomic/organisms/datalist_mobile.html
@@ -12,7 +12,7 @@
     />
   </svg>
 </div>
-<div class="absolute transform translate-y-[150%] right-full  flex items-center justify-center w-full bg-white datalist_desktop datalist">
+<div class="absolute transform translate-y-[150%] right-full  flex items-center justify-center w-full bg-white datalist_mobile datalist">
  
   <div class="search_field relative w-full">
     <input
