--- a/templates/atomic/organisms/nav.html
+++ b/templates/atomic/organisms/nav.html
@@ -9,7 +9,7 @@ class="background-color flex justify-between items-center  dark:bg-[#141414] fix
 <h1
   class="m-auto absolute left-[50%] -translate-x-[50%] text-2xl font-bold"
 >
-  <a href="/" class="mb-0 text-white flex items-center gap-1">
+  <a href="/" class="mb-0 text-white flex items-center gap-1 whitespace-nowrap">
     {% include 'icons/ball.html' %}
     TEAMS LIST
   </a>
