--- a/countries/templates/countries/paginator_players.html
+++ b/countries/templates/countries/paginator_players.html
@@ -1,7 +1,7 @@
 {% load custom_filters %} 
 
 {% if paginator_players.num_pages > 1 %}
-  <div tab="players" class="pagination pagination_players mt-4 sm:px-6 lg:px-8 {% if request.GET.tab == 'players' or not request.GET.tab %}{% else %} hidden {% endif %}">
+  <div tab="players" class="pagination pagination_players mt-4 sm:px-6 lg:px-8 {% if request.GET.tab == 'players' %}{% else %} hidden {% endif %}">
     <span class="text-sm text-gray-700 dark:text-white  flex gap-1 pb-5 items-center step-links">
       {% if related_items.has_previous %}
         <a href="{{ url|set_pagination_params }}page=1" class="pagination_a
